<resources>
    <string name="app_name">PizzaApp</string>
    <string name="serving_now">Pizza Menu</string>
    <string name="add">Add +</string>
    <string name="price">₹%1$f</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="confirmation_dialog_ok">OK</string>
    <string name="confirmation_dialog_yes">Yes</string>
    <string name="confirmation_dialog_no">No</string>

    <string name="no_internet_error_title">No Internet connection</string>
    <string name="no_internet_error_desc">Cannot connect to the internet, please check your internet connection and try again.</string>

    <string name="api_error_bad_request">Server error</string>
    <string name="api_error_bad_request_desc">Sorry, we have encountered an issue while connecting to the server, please try again later.</string>

    <string name="api_error_unauthorised">Unauthorized</string>
    <string name="api_error_unauthorised_desc">Sorry, your session has expired, please login again.</string>

    <string name="api_error_not_found">Resource not found</string>
    <string name="api_error_not_found_desc">Sorry, resource you are looking for is not available, please try again later.</string>

    <string name="api_error_timeout">Timeout</string>
    <string name="api_error_timeout_desc">Sorry, your request is timed out, Please check your internet connection and try again.</string>

    <string name="general_error_title">Error</string>
    <string name="api_error_title_unknown_desc">An error occurred, please try again later.</string>
    <string name="customise_order_title">Customise Your Order</string>
    <string name="crust">Crust</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total_amt">Total : %1$s</string>
    <string name="added_to_cart">"Your pizza is added to cart. "</string>
    <string name="quantity">Quantity:</string>
    <string name="size_desc">Crust: %1$s,  Size: %2$s</string>
    <string name="remove_title">Remove Pizza</string>
    <string name="remove_desc">Are you sure you want to remove this Pizza from your cart</string>
    <string name="confirm_remove">Yes, Remove</string>
    <string name="cart_empty">Your cart is empty at this moment.</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="coming_soon">Feature coming soon…</string>
    <string name="order_total">Order Total %1$s</string>
    <string name="your_cart">Your Cart</string>
</resources>