<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/rectangular_bg_rounded"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        style="@style/AppTheme.TextExtraLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/customise_order_title" />

    <TextView
        android:id="@+id/txtPizzaName"
        style="@style/AppTheme.TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_top_margin"
        android:gravity="center" />

    <TextView
        style="@style/AppTheme.TextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_top_margin"
        android:text="@string/crust" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_top_margin"
        android:background="@drawable/spinner_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCrust"
            style="@style/AppTheme.TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/crust"
            app:drawableEndCompat="@drawable/ic_spinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recCrust"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/small_top_margin"
            android:visibility="gone" />

    </LinearLayout>


    <TextView
        style="@style/AppTheme.TextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_section_top_margin"
        android:text="@string/size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_top_margin"
        android:background="@drawable/spinner_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSize"
            style="@style/AppTheme.TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/size"
            app:drawableEndCompat="@drawable/ic_spinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recSize"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/small_top_margin"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtPrice"
        style="@style/AppTheme.TextExtraLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_section_top_margin"
        tools:text="@string/total_amt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        style="@style/SubmitButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_section_top_margin"
        android:text="@string/add_to_cart"
        android:visibility="visible" />
</LinearLayout>