<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rectangular_bg_rounded"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/txtErrorTitle"
        style="@style/AppTheme.TextExtraLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="No Internet Connection" />

    <TextView
        android:id="@+id/txtErrorDesc"
        style="@style/AppTheme.TextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_top_margin"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        tools:text="Sorry, could not connect to the internet." />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="@style/SubmitButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_top_margin"
        android:text="@string/confirmation_dialog_ok"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lytConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            style="@style/SubmitButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirmation_dialog_yes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            style="@style/SubmitButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/confirmation_dialog_no" />
    </LinearLayout>

</LinearLayout>